Bug 1416673 - make #titlebar-content on active moz-lwtheme visible, r=dao
#titlebar-content is not a direct child of root window so the selector doesn't apply
and we have the #titlebar-content invisible on lwt themes.

There's a similar rule on windows:
https://dxr.mozilla.org/mozilla-central/rev/a928be5dacc3b544e29c0612b3f8cda6447df802/browser/themes/windows/browser.css#175

MozReview-Commit-ID: 79V2onRHdcx

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -1171,7 +1171,7 @@ notification.pluginVulnerable > .notification-inner > .messageCloseButton:not(:h
   :root[tabsintitlebar] > #titlebar:-moz-lwtheme {
     visibility: hidden;
   }
-  :root[tabsintitlebar] > #titlebar-content:-moz-lwtheme {
+  :root[tabsintitlebar] #titlebar-content:-moz-lwtheme {
     visibility: visible;
   }
 
